--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.6
+Date: 09.02.2022
+  Fixes:
+    - Fix remote commande : trace_event
+---------------------------------------------------------------------------------------------------
 Version: 0.2.5
 Date: 08.02.2022
   Adds:
