--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.7
+Date: 14.02.2022
+  Fixes:
+    - Fix : on_game_created_from_scenario : functions/events.lua:31 attempt to index local 'rEvent' (a nil value).
+---------------------------------------------------------------------------------------------------
 Version: 0.2.6
 Date: 09.02.2022
   Fixes:
