--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,30 @@
 ---------------------------------------------------------------------------------------------------
-Version: 0.2.7
+Version: 0.2.13
+Date: 17.02.2022
+  Fixes:
+    - fix : RITNLOG > {} : Creation du player en variable global dés le premier event le concernant trouvé.
+---------------------------------------------------------------------------------------------------
+Version: 0.2.12
+Date: 16.02.2022
+  Fixes:
+    - fix : log - player -> pcall sur les RitnEvent.event
+---------------------------------------------------------------------------------------------------
+Version: 0.2.11
+Date: 16.02.2022
+  Fixes:
+    - fix : data - constantes.
+---------------------------------------------------------------------------------------------------
+Version: 0.2.10
+Date: 16.02.2022
+  Adds:
+    - Ajouts d'events admin supplémentaires.
+---------------------------------------------------------------------------------------------------
+Version: 0.2.9
+Date: 16.02.2022
+  Fixes:
+    - fix : functions events - on_player_standard
+---------------------------------------------------------------------------------------------------
+Version: 0.2.8
 Date: 16.02.2022
   Changes:
     - Changement dans les events on_player.
